# zap-it

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yaml  publish.yaml
.sqlx/: query-5c5da30d20d36d1a9753f03318744c21518d542dd380ab6aea2772b6ebd59d61.json  query-672ff18c99a54043a0e533dfc20746a436a684e09bc1c3fdffe67872457a3961.json  query-6d64cc557248685aff01b14746a4824d74d07a9f78a521d4ca6e6c435f2a65ce.json  query-6d8346d6b9532abcb16a7d61631c0043a132bfaa70e501b548f465db958a8694.json  query-9c6744c19b471ad436b2550c7c3b4847ec6b0583b566f3ae29d5188965756929.json
migrations/: 20230914180640_items.sql
src/: main.rs
