[package]
name = "zap-it"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
chrono = { version = "0.4.30", features = ["serde"] }
rss = "2.0.6"
serde = "1.0.188"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.4", features = ["trace", "fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
validator = { version = "0.18.1", features = ["derive"] }
